# fflab-draftsim

./: .env.example  .gitignore  README.md  pyproject.toml  run_gui.py
api/: index.py
examples/: league.json
src/fflab/: __init__.py  ai.py  cli.py  config.py  data.py  draft.py  neural.py  optimizer.py  projections.py  scoring.py  simulation.py  trainable.py  training.py  web.py
src/fflab/static/: app.js  dexie.min.js  style.css
tests/: test_cli.py  test_draft.py  test_neural.py  test_optimizer.py  test_projections.py  test_scoring.py  test_simulation.py  test_trainable.py  test_training.py  test_web.py
tools/: train_standard_weights.mjs
