[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fflab"
version = "0.1.0"
description = "Offline-first ESPN fantasy football draft simulator."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "espn_api>=0.46.0",
    "pandas>=2.0",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]
[project.scripts]
fflab = "fflab.cli:main"
fflab-gui = "fflab.web:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
fflab = ["static/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
